# agentic-data-analysis

./: docker-compose.yml  langchain-agent.ipynb  langchainagent.py  langgraph.json  langraph-agent.ipynb  langraphagent.py  main.ipynb  pyproject.toml
data/: olist_products_dataset.csv
init/: 01-create-customer-table.sql  02-create-orders-table.sql  03-create-orders-payment-table.sql  04-create-order-review-table.sql  05-create-product-table.sql  06-create-seller-table.sql  07-create-order-items-table.sql  08-load-data.sql  09-create-readonly-user.sql
